=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================

Version 4.3.0
 - Fixed: [ 2928619 ] Burial w/o Death -> (on the date of death) (fisharebest)
 - Fixed: [ 1859794 ] individual titles (i.e. husband,wife) on Close relatives tab (fisharebest)
 - Fixed: [ 2934003 ] Pictures of other gedcom in Multimedia list (canajun2eh)
 - Changed: Fan chart font and colors moved from style.css to theme.php (canajun2eh)
 - Fixed: [ 2917682 ] ERROR 8 in access log (wooc)
 - Update: jQuery.autocomplete plugin 1.1 (volschin)
 - Update: TCPDF 4.8.024 (volschin)
 - Fixed: Include change of favorites in merge of records (volschin)
 - Fixed: [ 2933020 ] 4.2.3 Bracketing issue in Russian (wooc)
 - Fixed: [ 2931733 } 4.2.3 Name entering and editing (fisharebest)
 - Fixed: [ 2930541 ] PGV custom  tags not being removed on download V4.2.3 (fisharebest)
 - Fixed: [ 2931697 ] 4.2.3 countries.csv ... Iraq is called IRN (fisharebest)
 - Fixed: [ 2927240 ] 4.2.3 ... un-def var gid when importing (fisharebest)
 - Added: [ 1863843 ] Pedigree Google Map (kiwi_pgv/wooc)
 - Changed: UI for user list (volschin)
 - Added: Silhouette images support (kiwi_pgv/wooc)
 - Fixed: [ 2923977 ] PGV 4.2.3 ... redirection via login (wooc)
 - Fixed: [ 2923747 ] Bug in authentication.php (fisharebest)
 - Fixed: [ 2923224 ] Missing Space in Shared Note View GEDCOM Record (wooc)
 - Fixed: Sorting by gedcom filename instead of id (volschin)
 - Fixed: [ 2886694 ] add existing wife/husband SOUR etc (wooc)
 - Fixed: [ 2921858 ] Private marking in marriages (fisharebest)
 - Fixed: is_dead() was ignoring certain undated death events (fisharebest)

Version 4.2.3 2009-12-26
 - Update: TCPDF 4.8.019 (volschin)
 - Fixed: [ 2131272 ] do not update CHAN not remembered (wooc)