@@ -203,6 +203,24 @@ if ($action!="choose") {
 								replace_gedrec($id, $newrec);
 							}
 						}
+
+						// Merge hit counters
+						$hits=PGV_DB::prepare(
+							"SELECT page_name, SUM(page_count)".
+							" FROM {$TBLPREFIX}hit_counter".
+							" WHERE gedcom_id=? AND page_parameter IN (?, ?)".
+							" GROUP BY page_name"
+						)->execute(array(PGV_GED_ID, $gid1, $gid2))->fetchAssoc();
+						foreach ($hits as $page_name=>$page_count) {
+							PGV_DB::prepare(
+								"UPDATE {$TBLPREFIX}hit_counter SET page_count=?".
+								" WHERE gedcom_id=? AND page_name=? AND page_parameter=?"
+							)->execute(array($page_count, PGV_GED_ID, $page_name, $gid1));
+						}
+						PGV_DB::prepare(
+							"DELETE FROM {$TBLPREFIX}hit_counter".
+						 	" WHERE gedcom_id=? AND page_parameter=?"
+						)->execute(array(PGV_GED_ID, $gid2));
 					}
 					$newgedrec = "0 @$gid1@ $type1\n";
 					for($i=0; ($i<count($facts1) || $i<count($facts2)); $i++) {
